[workspace]
resolver = "2"

members = [
    "config",
    "network",
    "sencoin",
    "storage",
    "tx-pool",
    "domain",
]

exclude = []

[workspace.package]
authors = ["SENCOINEX"]
edition = "2021"
homepage = "https://sencoinex.com/"
license = "Apache-2.0"
publish = false
repository = "https://github.com/sencoinex/sencoin-core"
rust-version = "1.67.0"

[workspace.dependencies]
# Internal crate dependencies.
# Please do not add any test features here: they should be declared by the individual crate.
sencoin-config = { path = "config" }
sencoin-network = { path = "network" }
sencoin-storage = { path = "storage" }
sencoin-tx-pool = { path = "tx-pool" }
sencoin-domain = { path = "domain" }

# External crate dependencies.
# Please do not add any test features here: they should be declared by the individual crate.
async-trait = "0.1.66"
anyhow = "1.0.69"
chrono = { version = "0.4.23", features = ["clock", "serde"] }
clap = { version = "4.1.8", features = ["derive", "env", "suggestions"] }
futures = "0.3.26"
once_cell = "1.17.1"
serde = { version = "1.0.152", features = ["derive", "rc"] }
thiserror = "1.0.38"
tokio = { version = "1.25.0", features = ["full"] }
toml = "0.7.2"
ulid = "1.0.0"

